# python-killerbunny

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-tests.yaml
docs/: remaining_tasks.txt
docs/misc/: compiler_roadmap.txt  installs.txt  method_order_conventions.txt  temp.txt  token_classes.txt
killerbunny/: __init__.py  bookstore.json  example_2.5.2.3.json  main.py  normalizer.py
killerbunny/cli/: README.md  repl.py
killerbunny/evaluating/: compare_ops.py  cyclic_data.txt  evaluator.py  evaluator_types.py  runtime_result.py  value_nodes.py  well_formed_query.py
killerbunny/incubator/jsonpointer/: constants.py  json_pointer.py  pretty_printer.py  refactoring_bnf.txt  str_repr_literals_examples.py
killerbunny/lexing/: lexer.py  tokens.py
killerbunny/parsing/: function.py  helper.py  node_type.py  parse_result.py  parser.py  parser_nodes.py  scratchpad.py  selector_nodes.py  terminal_nodes.py
killerbunny/shared/: constants.py  context.py  errors.py  grammar.txt  jpath_bnf.py  json_type_defs.py  position.py  testgen.py
tests/: conftest.py  utils.py
tests/incubator/jsonpointer/: test_format_flags.py  test_json_pointer.py  test_pretty_printer.py  test_pretty_printer_cycles.py
tests/jpath/evaluating/: __init__.py  evaluator_test_cases.json  test_cts.py  test_evaluator_rfc9535_tables.py  test_nts.py  test_root_value_cycles.py  test_table_11.py
tests/jpath/lexing/: lexer_test_cases.json  test_lex_rfc_examples.py  test_lexer_rfc9535_tables.py
tests/jpath_files/: bookstore.json
(+74 files in other folders)
