[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "killerbunny"
version = "0.1.0"
description = "Evaluator for JSONPath Query expressions. Implements RFC 9535"
authors = [ { name = "Robert L. Ross", email= "rob.ross@gmail.com" } ]
license = { text = "TBD" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]
dependencies = [
    # --- External Dependencies ---

    # --- Internal Dependencies ---

]

[project.optional-dependencies]
test = [ "pytest" ]

[tool.setuptools.packages.find]
where = ["."]
include = ["killerbunny*"]  # Make sure all subpackages are included

    